# videoclipper

./: .gitignore  AGENTS.md  LICENSE  README.md  pyproject.toml  spec.md
docs/: ROADMAP.md
src/videoclipper/: cli.py  clipper.py
src/youtubeclipper/: cli.py  clipper.py
tests/: test_clip_ranges.py
